~ trying to fix <pre> line spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,7 @@ code {
 pre { 
     font-family: 'HFSM Mono';
     font-size: 11px;
+    line-height: 11px;
 }
 
 a:link, a:visited {
